# Poetry_C_Extension_Example

./: .pre-commit-config.yaml  Dockerfile  README.md  build.py  docker-compose.yaml  pyproject-sample.toml  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
docker/: Dockerfile
ext/src/: mathmodule.c  spammodule.c
spam/: __init__.py
spam/math/: __init__.py
tests/: test_spam.py
tests/math/: test_math.py
